tests/ui/traits/const-traits/specializing-constness-2.stderr
error[E0277]: the trait bound `T: ~const A` is not satisfied
  --> $DIR/specializing-constness-2.rs:27:5
   |
LL |     <T as A>::a();
   |     ^^^^^^^^^^^^^

error[E0015]: cannot call non-const fn `<T as A>::a` in constant functions
  --> $DIR/specializing-constness-2.rs:27:5
   |
LL |     <T as A>::a();
   |     ^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
